deploy/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: timing-react-vibe
spec:
  hostnames:
    - timing-react-vibe.aa349-1l5zl3.intility.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: aa
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: timing-react-vibe
          port: 80
